--- a/packages/carv2-path-index/package.json
+++ b/packages/carv2-path-index/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -35,6 +35,8 @@
     "docs"
   ],
   "devDependencies": {
-    "@types/varint": "^6.0.0"
+    "@types/varint": "^6.0.0",
+    "assert": "^2.0.0",
+    "mocha": "^10.0.0"
   }
 }
