--- a/packages/carv2-path-index/package.json
+++ b/packages/carv2-path-index/package.json
@@ -13,15 +13,16 @@
   "license": "(Apache-2.0 OR MIT)",
   "dependencies": {
     "@ipld/car": "^4.1.2",
+    "@ipld/dag-cbor": "^7.0.1",
     "@ipld/unixfs": "^1.0.3-dev",
     "blockstore-core": "^1.0.5",
     "ipfs-unixfs-importer": "^9.0.7",
     "it-last": "^1.0.6",
+    "it-reader": "^5.0.1",
     "merge-options": "^3.0.4",
     "multiformats": "^9.6.4",
     "uint8arrays": "^3.0.0",
-    "varint": "^6.0.0",
-    "it-reader": "^5.0.1"
+    "varint": "^6.0.0"
   },
   "devDependencies": {
     "@types/varint": "^6.0.0",
